[editor/dashboard] Fix DashboardModuleSearch bounds not aligning correctly.

--- a/app/src/editor/dashboard/components/Dashboard.pcss
+++ b/app/src/editor/dashboard/components/Dashboard.pcss
@@ -6,6 +6,10 @@ body :global(.react-grid-item.react-grid-placeholder) {
   border-radius: 4px;
 }
 
+.DashboardElements {
+  /* required to hook into canvasElements */
+}
+
 .dashboardItem {
   height: 100%;
   width: 100%;
